--- a/views/ticket-entry.ejs
+++ b/views/ticket-entry.ejs
@@ -29,7 +29,7 @@
          theright = str.lastIndexOf("&");
          return (str.substring(theleft, theright));
       }
-      
+
       $(document).ready(function () {
          const database = firebase.database();
          var locate = window.location
@@ -319,6 +319,15 @@
          });
 
          $('#delGuest').click(() => {
+            if(ogGuest){
+               $('#deleteGModal').modal('show');
+            } else {
+               toggle(true);
+            }
+         });
+
+         $('#deleteConfirm').click(() => {
+            $('#deleteGModal').modal('hide');
             toggle(true);
          });
 
@@ -749,6 +758,27 @@
             </div>
          </div>
       </div>
+
+      <div class="modal fade" id="deleteGModal" tabindex="-1" role="dialog" aria-labelledby="deleteGuestConfirmation" aria-hidden="true">
+         <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+               <div class="modal-header">
+               <h5 class="modal-title" id="exampleModalLongTitle">Delete Guest?</h5>
+               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+               </button>
+               </div>
+               <div class="modal-body">
+                  <label>This action is irreversible.</label>
+               </div>
+               <div class="modal-footer">
+               <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+               <button type="button" class="btn btn-danger" id="deleteConfirm">Yes</button>
+               </div>
+            </div>
+         </div>
+      </div>
+
    </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" 
