--- a/views/ticket-entry.ejs
+++ b/views/ticket-entry.ejs
@@ -40,6 +40,9 @@
 
          var text = document.joe.burns.value
          var myvar = delineate(text);
+         
+         myvar=myvar.substring(0,myvar.indexOf("&"));
+      
 
          $("input[id='checkNum']").prop("disabled", true);
          $("input[id='checkNumG']").prop("disabled", true);
