--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/index">Event Sign Up</a>
+    <a class="navbar-brand" href="/index">Poolesville Event Sign Up</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,10 +10,10 @@
           <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/display-ticket-data">Tickets</a>
+          <a class="nav-link" href="/search-student">Search</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/search-student">Search</a>
+          <a class="nav-link" href="/display-ticket-data">Tickets</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/upload">Upload</a>
