--- a/views/display-ticket-data.ejs
+++ b/views/display-ticket-data.ejs
@@ -30,6 +30,8 @@
       // Click download link
       downloadLink.click();
     }
+
+    //Export HTML Table to .csv File
     function exportTableToCSV(filename) {
       var csv = [];
       var rows = document.querySelectorAll("table tr");
